cleaned jupyter to add bins'

--- a/step2_clean_ground_stations.ipynb
+++ b/step2_clean_ground_stations.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean Weather Station Locations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,7 +15,15 @@
    "source": [
     "# package imports go here\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from urllib.request import urlopen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read in Weather Station Locations from a file"
    ]
   },
   {
@@ -227,10 +242,19 @@
     "# See pandas IO tools for help reading this file\n",
     "# -- https://pandas.pydata.org/pandas-docs/version/0.10.1/io.html\n",
     "\n",
+    "# NOAA ground site Data\n",
+    "# https://www1.ncdc.noaa.gov/pub/data/ghcn/daily/ghcnd-stations.txt\n",
+    "\n",
+    "noaa_daily_site = 'https://www1.ncdc.noaa.gov/pub/data/ghcn/daily/'\n",
+    "noaa_ground_station_loc_file = noaa_daily_site + 'ghcnd-stations.txt'\n",
+    "\n",
+    "# Note:  file is column delimited.  So need to use alternate method to read with colspec and read_fwf\n",
+    "\n",
     "#             ID      Lat      Lon      Elev     State    Name     GSN      HCN/CRN  WMO ID\n",
     "col_specs = [(0,11), (12,20), (21,30), (31,37), (38,40), (41,71), (72,75), (76,79), (80,85)]\n",
     "\n",
-    "ground_stations = pd.read_fwf('source_files/weather/ghcnd-stations.txt', colspecs=col_specs, header=None, index_col=0)\n",
+    "with urlopen(noaa_ground_station_loc_file) as url:\n",
+    "    ground_stations = pd.read_fwf(url, colspecs=col_specs, header=None, index_col=0)\n",
     "\n",
     "ground_stations\n"
    ]
@@ -758,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -925,29 +949,20 @@
        "[81477 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Remove unnecessary columns\n",
     "ground_stations_US_CA = ground_stations_US_CA.drop(['GSN', 'HCN/CRN', 'WMO ID'], axis=1)\n",
     "ground_stations_US_CA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write US & CA ground stations to a csv file\n",
-    "ground_stations_US_CA.to_csv('result_files/US_CA_Station_locations.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -981,47 +996,47 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>23763</th>\n",
        "      <td>CA001010066</td>\n",
        "      <td>48.8667</td>\n",
        "      <td>-123.2833</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>13.123360</td>\n",
        "      <td>BC</td>\n",
        "      <td>ACTIVE PASS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>23764</th>\n",
        "      <td>CA001010235</td>\n",
        "      <td>48.4000</td>\n",
        "      <td>-123.4833</td>\n",
-       "      <td>17.0</td>\n",
+       "      <td>55.774280</td>\n",
        "      <td>BC</td>\n",
        "      <td>ALBERT HEAD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>23765</th>\n",
        "      <td>CA001010595</td>\n",
        "      <td>48.5833</td>\n",
        "      <td>-123.5167</td>\n",
-       "      <td>85.0</td>\n",
+       "      <td>278.871400</td>\n",
        "      <td>BC</td>\n",
        "      <td>BAMBERTON OCEAN CEMENT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>23766</th>\n",
        "      <td>CA001010720</td>\n",
        "      <td>48.5000</td>\n",
        "      <td>-124.0000</td>\n",
-       "      <td>351.0</td>\n",
+       "      <td>1151.574840</td>\n",
        "      <td>BC</td>\n",
        "      <td>BEAR CREEK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>23767</th>\n",
        "      <td>CA001010774</td>\n",
        "      <td>48.5000</td>\n",
        "      <td>-123.3500</td>\n",
-       "      <td>61.0</td>\n",
+       "      <td>200.131240</td>\n",
        "      <td>BC</td>\n",
        "      <td>BEAVER LAKE</td>\n",
        "    </tr>\n",
@@ -1035,47 +1050,47 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81472</th>\n",
+       "      <th>125176</th>\n",
        "      <td>USW00096405</td>\n",
        "      <td>60.4731</td>\n",
        "      <td>-145.3542</td>\n",
-       "      <td>25.3</td>\n",
+       "      <td>83.005252</td>\n",
        "      <td>AK</td>\n",
        "      <td>CORDOVA 14 ESE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81473</th>\n",
+       "      <th>125177</th>\n",
        "      <td>USW00096406</td>\n",
        "      <td>64.5014</td>\n",
        "      <td>-154.1297</td>\n",
-       "      <td>78.9</td>\n",
+       "      <td>258.858276</td>\n",
        "      <td>AK</td>\n",
        "      <td>RUBY 44 ESE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81474</th>\n",
+       "      <th>125178</th>\n",
        "      <td>USW00096407</td>\n",
        "      <td>66.5620</td>\n",
        "      <td>-159.0036</td>\n",
-       "      <td>6.7</td>\n",
+       "      <td>21.981628</td>\n",
        "      <td>AK</td>\n",
        "      <td>SELAWIK 28 E</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81475</th>\n",
+       "      <th>125179</th>\n",
        "      <td>USW00096408</td>\n",
        "      <td>63.4519</td>\n",
        "      <td>-150.8747</td>\n",
-       "      <td>678.2</td>\n",
+       "      <td>2225.065688</td>\n",
        "      <td>AK</td>\n",
        "      <td>DENALI 27 N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81476</th>\n",
+       "      <th>125180</th>\n",
        "      <td>USW00096409</td>\n",
        "      <td>68.6483</td>\n",
        "      <td>-149.3986</td>\n",
-       "      <td>750.1</td>\n",
+       "      <td>2460.958084</td>\n",
        "      <td>AK</td>\n",
        "      <td>TOOLIK LAKE 5 ENE</td>\n",
        "    </tr>\n",
@@ -1085,29 +1100,240 @@
        "</div>"
       ],
       "text/plain": [
-       "                ID      Lat       Lon  Elevation State                    Name\n",
-       "0      CA001010066  48.8667 -123.2833        4.0    BC             ACTIVE PASS\n",
-       "1      CA001010235  48.4000 -123.4833       17.0    BC             ALBERT HEAD\n",
-       "2      CA001010595  48.5833 -123.5167       85.0    BC  BAMBERTON OCEAN CEMENT\n",
-       "3      CA001010720  48.5000 -124.0000      351.0    BC              BEAR CREEK\n",
-       "4      CA001010774  48.5000 -123.3500       61.0    BC             BEAVER LAKE\n",
-       "...            ...      ...       ...        ...   ...                     ...\n",
-       "81472  USW00096405  60.4731 -145.3542       25.3    AK          CORDOVA 14 ESE\n",
-       "81473  USW00096406  64.5014 -154.1297       78.9    AK             RUBY 44 ESE\n",
-       "81474  USW00096407  66.5620 -159.0036        6.7    AK            SELAWIK 28 E\n",
-       "81475  USW00096408  63.4519 -150.8747      678.2    AK             DENALI 27 N\n",
-       "81476  USW00096409  68.6483 -149.3986      750.1    AK       TOOLIK LAKE 5 ENE\n",
+       "                 ID      Lat       Lon    Elevation State  \\\n",
+       "23763   CA001010066  48.8667 -123.2833    13.123360    BC   \n",
+       "23764   CA001010235  48.4000 -123.4833    55.774280    BC   \n",
+       "23765   CA001010595  48.5833 -123.5167   278.871400    BC   \n",
+       "23766   CA001010720  48.5000 -124.0000  1151.574840    BC   \n",
+       "23767   CA001010774  48.5000 -123.3500   200.131240    BC   \n",
+       "...             ...      ...       ...          ...   ...   \n",
+       "125176  USW00096405  60.4731 -145.3542    83.005252    AK   \n",
+       "125177  USW00096406  64.5014 -154.1297   258.858276    AK   \n",
+       "125178  USW00096407  66.5620 -159.0036    21.981628    AK   \n",
+       "125179  USW00096408  63.4519 -150.8747  2225.065688    AK   \n",
+       "125180  USW00096409  68.6483 -149.3986  2460.958084    AK   \n",
+       "\n",
+       "                          Name  \n",
+       "23763              ACTIVE PASS  \n",
+       "23764              ALBERT HEAD  \n",
+       "23765   BAMBERTON OCEAN CEMENT  \n",
+       "23766               BEAR CREEK  \n",
+       "23767              BEAVER LAKE  \n",
+       "...                        ...  \n",
+       "125176          CORDOVA 14 ESE  \n",
+       "125177             RUBY 44 ESE  \n",
+       "125178            SELAWIK 28 E  \n",
+       "125179             DENALI 27 N  \n",
+       "125180       TOOLIK LAKE 5 ENE  \n",
        "\n",
        "[81477 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ground_stations_US_CA = pd.read_csv('result_files/US_CA_Station_locations.csv')\n",
+    "# Missing Elevation Data will have a value of -999.\n",
+    "# This skews the maps.  We will set it to an median elevation\n",
+    "# This will not be correct. But it will impact the result the least\n",
+    "\n",
+    "average_elevation = ground_stations_US_CA['Elevation'].median()\n",
+    "\n",
+    "ground_stations_US_CA['Elevation'] = ground_stations_US_CA['Elevation'].replace(-999, average_elevation)\n",
+    "ground_stations_US_CA['Elevation'] = ground_stations_US_CA['Elevation'].apply(lambda x: x * 3.28084)\n",
+    "ground_stations_US_CA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write US & CA ground stations to a csv file\n",
+    "#ground_stations_US_CA.to_csv('result_files/US_CA_Station_locations.csv', index=False)\n",
+    "ground_stations_US_CA.to_parquet('result_files/stp2_US_CA_Station_locations.parquet.gzip', compression='gzip', engine=\"fastparquet\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lon</th>\n",
+       "      <th>Elevation</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>23763</th>\n",
+       "      <td>CA001010066</td>\n",
+       "      <td>48.8667</td>\n",
+       "      <td>-123.2833</td>\n",
+       "      <td>13.123360</td>\n",
+       "      <td>BC</td>\n",
+       "      <td>ACTIVE PASS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23764</th>\n",
+       "      <td>CA001010235</td>\n",
+       "      <td>48.4000</td>\n",
+       "      <td>-123.4833</td>\n",
+       "      <td>55.774280</td>\n",
+       "      <td>BC</td>\n",
+       "      <td>ALBERT HEAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23765</th>\n",
+       "      <td>CA001010595</td>\n",
+       "      <td>48.5833</td>\n",
+       "      <td>-123.5167</td>\n",
+       "      <td>278.871400</td>\n",
+       "      <td>BC</td>\n",
+       "      <td>BAMBERTON OCEAN CEMENT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23766</th>\n",
+       "      <td>CA001010720</td>\n",
+       "      <td>48.5000</td>\n",
+       "      <td>-124.0000</td>\n",
+       "      <td>1151.574840</td>\n",
+       "      <td>BC</td>\n",
+       "      <td>BEAR CREEK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23767</th>\n",
+       "      <td>CA001010774</td>\n",
+       "      <td>48.5000</td>\n",
+       "      <td>-123.3500</td>\n",
+       "      <td>200.131240</td>\n",
+       "      <td>BC</td>\n",
+       "      <td>BEAVER LAKE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125176</th>\n",
+       "      <td>USW00096405</td>\n",
+       "      <td>60.4731</td>\n",
+       "      <td>-145.3542</td>\n",
+       "      <td>83.005252</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>CORDOVA 14 ESE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125177</th>\n",
+       "      <td>USW00096406</td>\n",
+       "      <td>64.5014</td>\n",
+       "      <td>-154.1297</td>\n",
+       "      <td>258.858276</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>RUBY 44 ESE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125178</th>\n",
+       "      <td>USW00096407</td>\n",
+       "      <td>66.5620</td>\n",
+       "      <td>-159.0036</td>\n",
+       "      <td>21.981628</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>SELAWIK 28 E</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125179</th>\n",
+       "      <td>USW00096408</td>\n",
+       "      <td>63.4519</td>\n",
+       "      <td>-150.8747</td>\n",
+       "      <td>2225.065688</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>DENALI 27 N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125180</th>\n",
+       "      <td>USW00096409</td>\n",
+       "      <td>68.6483</td>\n",
+       "      <td>-149.3986</td>\n",
+       "      <td>2460.958084</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>TOOLIK LAKE 5 ENE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>81477 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ID      Lat       Lon    Elevation State  \\\n",
+       "23763   CA001010066  48.8667 -123.2833    13.123360    BC   \n",
+       "23764   CA001010235  48.4000 -123.4833    55.774280    BC   \n",
+       "23765   CA001010595  48.5833 -123.5167   278.871400    BC   \n",
+       "23766   CA001010720  48.5000 -124.0000  1151.574840    BC   \n",
+       "23767   CA001010774  48.5000 -123.3500   200.131240    BC   \n",
+       "...             ...      ...       ...          ...   ...   \n",
+       "125176  USW00096405  60.4731 -145.3542    83.005252    AK   \n",
+       "125177  USW00096406  64.5014 -154.1297   258.858276    AK   \n",
+       "125178  USW00096407  66.5620 -159.0036    21.981628    AK   \n",
+       "125179  USW00096408  63.4519 -150.8747  2225.065688    AK   \n",
+       "125180  USW00096409  68.6483 -149.3986  2460.958084    AK   \n",
+       "\n",
+       "                          Name  \n",
+       "23763              ACTIVE PASS  \n",
+       "23764              ALBERT HEAD  \n",
+       "23765   BAMBERTON OCEAN CEMENT  \n",
+       "23766               BEAR CREEK  \n",
+       "23767              BEAVER LAKE  \n",
+       "...                        ...  \n",
+       "125176          CORDOVA 14 ESE  \n",
+       "125177             RUBY 44 ESE  \n",
+       "125178            SELAWIK 28 E  \n",
+       "125179             DENALI 27 N  \n",
+       "125180       TOOLIK LAKE 5 ENE  \n",
+       "\n",
+       "[81477 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#ground_stations_US_CA = pd.read_csv('result_files/US_CA_Station_locations.csv')\n",
+    "pd.read_parquet('result_files/stp2_US_CA_Station_locations.parquet.gzip', engine=\"fastparquet\") \n",
     "ground_stations_US_CA"
    ]
   },
