--- a/step1_clean_noaa_weather_data.ipynb
+++ b/step1_clean_noaa_weather_data.ipynb
@@ -409,7 +409,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID      42027\n",
+       "Date      365\n",
+       "Attr       71\n",
+       "Val      5021\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# How many unique values in each column\n",
+    "unique_counts = weather_data.nunique()\n",
+    "unique_counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 42027 weather stations globally in the dataset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +572,7 @@
        "[30035770 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,6 +581,32 @@
     "# Retain only US and CA weather data\n",
     "weather_US_CA = weather_data[weather_data['ID'].str.contains(\"^US|^CA\")]\n",
     "weather_US_CA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID      32259\n",
+       "Date      365\n",
+       "Attr       66\n",
+       "Val      4512\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# How many unique values in each column\n",
+    "unique_counts = weather_US_CA.nunique()\n",
+    "unique_counts"
    ]
   },
   {
@@ -597,6 +656,8 @@
    "metadata": {},
    "source": [
     "### Useful readings\n",
+    "\n",
+    "- There are 32259 unique weather stations in US and CA combined\n",
     "\n",
     "- Useful readings are PRCP, TMAX, TMIN, TAVG\n",
     "    - PRCP is precipitation (snow, rain, etc) in tenths of mm\n",
@@ -956,15 +1017,6 @@
    "source": [
     "# Show column types\n",
     "weather_data_df.dtypes\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   },
   {
