added verification or creation of result_files and plotly subdirectories

--- a/step5_plot_us_canada_pedro.ipynb
+++ b/step5_plot_us_canada_pedro.ipynb
@@ -7,6 +7,10 @@
     "----------------------\n",
     "# Create Dynamic Plotly Maps\n",
     "- Pedro maintains this based on our ever changing bins.\n",
+    "\n",
+    "- Note, the output of this jupyter files has been cleared before saving.\n",
+    "    - If this is not done, the resulting jupyter file is ~200MB and too big to push to github.\n",
+    "    - Please run this jupyter file to see the inline maps.\n",
     "----------------------"
    ]
   },
@@ -22,9 +26,70 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import kaleido\n",
+    "import os\n",
     "\n",
     "!python --version\n",
     "#!pip list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insure plotly directory exists\n",
+    "def create_subdirectory(html_directory):\n",
+    "    # Define the directory path as html_directory\n",
+    "    \n",
+    "    # Check if the directory already exists\n",
+    "    if not os.path.exists(html_directory):\n",
+    "        # Create the directory if it doesn't exist\n",
+    "        os.makedirs(html_directory)\n",
+    "        print(f\"Directory '{html_directory}' created successfully.\")\n",
+    "    else:\n",
+    "        print(f\"Directory '{html_directory}' already exists.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save plotly html files\n",
+    "\n",
+    "#### Two alternatives:\n",
+    "1. save in a local plotly directory (don't push to repo)\n",
+    "2. save in a clone of the github pages\n",
+    "    - assumes github pages is the repo 'jflachman.github.io'\n",
+    "    - a clone of the github pages is at the same level is this repo 'DU-project-1'\n",
+    "\n",
+    "Comment / Uncomment the appropriate \"plotly_html_path\" and create_subdirectory(plotly_html_path) below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use plotly_html_path \"../jflachman.github.io/plotly/\" to save plotfile to github pages repo.\n",
+    "#   requires cloning repo parallel to this DU-project-1 repo.\n",
+    "# plotly_html_path = \"../jflachman.github.io/plotly/\"\n",
+    "\n",
+    "# To create plotly html files without saving to the github pages repo.  Use a plotly subdirectory\n",
+    "\n",
+    "# Define plotly subdirectory\n",
+    "plotly_html_path = 'plotly/'\n",
+    "\n",
+    "# Call the function to create the directory\n",
+    "create_subdirectory(plotly_html_path)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read in ground station file from Step4"
    ]
   },
   {
@@ -59,8 +124,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotly_html_path = \"../jflachman.github.io/plotly/\"\n",
-    "plotly_img_path = 'imgs/'\n",
     "zoom_scale = 2.4\n",
     "center_dict = dict(lat=52,lon=-114)\n",
     "fig_width = 900\n",
@@ -104,7 +167,6 @@
     "\n",
     "label = \"Days 60-80\"\n",
     "color_range = [150,300]\n",
-    "plotly_img = plotly_img_path + label.replace(' ','_') + \".png\"\n",
     "plotly_html = plotly_html_path + 'ideal_' + label.replace(' ','_').replace('>','GT').replace('<','LT') + \".html\"\n",
     "\n",
     "figIdeal6080 = px.scatter_mapbox(figIdeal_6080, lat=\"Lat\", lon=\"Lon\", \n",
